Rename `additionalJavaBaseInputs` to `additionalInputForDatabinding`
    to make it clearer that these inputs are used by databinding, and are unrelated to the javabase.

    PiperOrigin-RevId: 346148539