@@ -29,12 +29,13 @@ import com.google.devtools.build.lib.actions.AbstractAction;
 import com.google.devtools.build.lib.actions.ActionEnvironment;
 import com.google.devtools.build.lib.actions.ActionExecutionContext;
 import com.google.devtools.build.lib.actions.Artifact;
-import com.google.devtools.build.lib.actions.CommandLine;
 import com.google.devtools.build.lib.actions.CommandLines;
-import com.google.devtools.build.lib.actions.EmptyRunfilesSupplier;
+import com.google.devtools.build.lib.actions.CompositeRunfilesSupplier;
 import com.google.devtools.build.lib.actions.ExecutionRequirements;
 import com.google.devtools.build.lib.actions.ParamFileInfo;
+import com.google.devtools.build.lib.actions.RunfilesSupplier;
 import com.google.devtools.build.lib.actions.SpawnResult;
+import com.google.devtools.build.lib.analysis.FilesToRunProvider;
 import com.google.devtools.build.lib.analysis.RuleContext;
 import com.google.devtools.build.lib.analysis.actions.CustomCommandLine;
 import com.google.devtools.build.lib.analysis.actions.SpawnAction;
@@ -46,11 +47,13 @@ import com.google.devtools.build.lib.collect.nestedset.Order;
 import com.google.devtools.build.lib.packages.TargetUtils;
 import com.google.devtools.build.lib.rules.java.JavaCompileAction.ProgressMessage;
 import com.google.devtools.build.lib.rules.java.JavaConfiguration.JavaClasspathMode;
-import com.google.devtools.build.lib.rules.java.JavaPluginInfo.JavaPluginData;
+import com.google.devtools.build.lib.rules.java.JavaPluginInfoProvider.JavaPluginInfo;
 import com.google.devtools.build.lib.util.LazyString;
 import com.google.devtools.build.lib.util.Pair;
 import com.google.devtools.build.lib.view.proto.Deps;
+import com.google.protobuf.ExtensionRegistry;
 import java.io.IOException;
+import java.io.InputStream;
 import java.io.Serializable;
 import java.util.Collections;
 import java.util.List;
@@ -79,7 +82,6 @@ public class JavaHeaderCompileActionBuilder {
 
   private Artifact outputJar;
   @Nullable private Artifact outputDepsProto;
-  @Nullable private Artifact strippedOutputDepsProto;
   @Nullable private Artifact manifestOutput;
   @Nullable private Artifact gensrcOutputJar;
   @Nullable private Artifact resourceOutputJar;
@@ -96,7 +98,7 @@ public class JavaHeaderCompileActionBuilder {
   private NestedSet<Artifact> compileTimeDependencyArtifacts =
       NestedSetBuilder.emptySet(Order.STABLE_ORDER);
   private final ImmutableList.Builder<String> javacOptsBuilder = ImmutableList.builder();
-  private JavaPluginData plugins = JavaPluginData.empty();
+  private JavaPluginInfo plugins = JavaPluginInfo.empty();
 
   private ImmutableList<Artifact> additionalInputs = ImmutableList.of();
   private NestedSet<Artifact> toolsJars = NestedSetBuilder.emptySet(Order.NAIVE_LINK_ORDER);
@@ -110,13 +112,6 @@ public class JavaHeaderCompileActionBuilder {
   /** Sets the output jdeps file. */
   public JavaHeaderCompileActionBuilder setOutputDepsProto(@Nullable Artifact outputDepsProto) {
     this.outputDepsProto = outputDepsProto;
-    return this;
-  }
-
-  /** Sets the output jdeps file. */
-  public JavaHeaderCompileActionBuilder setStrippedOutputDepsProto(
-      @Nullable Artifact outputDepsProto) {
-    this.strippedOutputDepsProto = outputDepsProto;
     return this;
   }
 
@@ -205,7 +200,7 @@ public class JavaHeaderCompileActionBuilder {
   }
 
   /** Sets the annotation processors classpath entries. */
-  public JavaHeaderCompileActionBuilder setPlugins(JavaPluginData plugins) {
+  public JavaHeaderCompileActionBuilder setPlugins(JavaPluginInfo plugins) {
     checkNotNull(plugins, "plugins must not be null");
     checkState(this.plugins.isEmpty());
     this.plugins = plugins;
@@ -310,7 +305,6 @@ public class JavaHeaderCompileActionBuilder {
         ImmutableSet.<Artifact>builder()
             .add(outputJar)
             .add(outputDepsProto)
-            .add(strippedOutputDepsProto)
             .addAll(additionalOutputs);
     Stream.of(gensrcOutputJar, resourceOutputJar, manifestOutput)
         .filter(x -> x != null)
@@ -324,13 +318,32 @@ public class JavaHeaderCompileActionBuilder {
             .addAll(sourceFiles)
             .addTransitive(toolsJars);
 
-    JavaToolchainTool headerCompiler =
+    ImmutableList<RunfilesSupplier> runfilesSuppliers = ImmutableList.of();
+    FilesToRunProvider headerCompiler =
         useHeaderCompilerDirect
             ? javaToolchain.getHeaderCompilerDirect()
             : javaToolchain.getHeaderCompiler();
     // The header compiler is either a jar file that needs to be executed using
     // `java -jar <path>`, or an executable that can be run directly.
-    CommandLine executableLine = headerCompiler.buildCommandLine(javaToolchain, mandatoryInputs);
+    CustomCommandLine executableLine;
+    if (!headerCompiler.getExecutable().getExtension().equals("jar")) {
+      runfilesSuppliers = ImmutableList.of(headerCompiler.getRunfilesSupplier());
+      mandatoryInputs.addTransitive(headerCompiler.getFilesToRun());
+      executableLine =
+          CustomCommandLine.builder().addExecPath(headerCompiler.getExecutable()).build();
+    } else {
+      mandatoryInputs
+          .addTransitive(javaToolchain.getJavaRuntime().javaBaseInputsMiddleman())
+          .add(headerCompiler.getExecutable());
+      executableLine =
+          CustomCommandLine.builder()
+              .addPath(javaToolchain.getJavaRuntime().javaBinaryExecPathFragment())
+              .add("-Xverify:none")
+              .addAll(javaToolchain.getTurbineJvmOptions())
+              .add("-jar")
+              .addExecPath(headerCompiler.getExecutable())
+              .build();
+    }
 
     CustomCommandLine.Builder commandLine =
         CustomCommandLine.builder()
@@ -338,7 +351,7 @@ public class JavaHeaderCompileActionBuilder {
             .addExecPath("--gensrc_output", gensrcOutputJar)
             .addExecPath("--resource_output", resourceOutputJar)
             .addExecPath("--output_manifest_proto", manifestOutput)
-            .addExecPath("--output_deps", strippedOutputDepsProto)
+            .addExecPath("--output_deps", outputDepsProto)
             .addExecPaths("--bootclasspath", bootclasspathEntries)
             .addExecPaths("--sources", sourceFiles)
             .addExecPaths("--source_jars", sourceJars)
@@ -363,12 +376,17 @@ public class JavaHeaderCompileActionBuilder {
 
     ImmutableMap<String, String> executionInfo =
         TargetUtils.getExecutionInfo(ruleContext.getRule(), ruleContext.isAllowTagsPropagation());
-    if (javaConfiguration.inmemoryJdepsFiles()) {
-      executionInfo =
-          ImmutableMap.of(
-              ExecutionRequirements.REMOTE_EXECUTION_INLINE_OUTPUTS,
-              strippedOutputDepsProto.getExecPathString());
+    Consumer<Pair<ActionExecutionContext, List<SpawnResult>>> resultConsumer = null;
+    if (classpathMode == JavaClasspathMode.BAZEL) {
+      if (javaConfiguration.inmemoryJdepsFiles()) {
+        executionInfo =
+            ImmutableMap.of(
+                ExecutionRequirements.REMOTE_EXECUTION_INLINE_OUTPUTS,
+                outputDepsProto.getExecPathString());
+      }
+      resultConsumer = createResultConsumer(outputDepsProto);
     }
+
     if (useDirectClasspath) {
       NestedSet<Artifact> classpath;
       if (!directJars.isEmpty() || classpathEntries.isEmpty()) {
@@ -381,22 +399,11 @@ public class JavaHeaderCompileActionBuilder {
       commandLine.addExecPaths("--classpath", classpath);
       commandLine.add("--reduce_classpath_mode", "NONE");
 
-      NestedSet<Artifact> allInputs = mandatoryInputs.build();
-      Consumer<Pair<ActionExecutionContext, List<SpawnResult>>> resultConsumer =
-          createResultConsumer(
-              strippedOutputDepsProto,
-              outputDepsProto,
-              allInputs.toList(),
-              // If classPathMode == BAZEL, also make sure to inject the dependencies to be
-              // available to downstream actions. Else just do enough work to locally create the
-              // full .jdeps from the .stripped .jdeps produced on the executor.
-              /*insertDependencies=*/ classpathMode == JavaClasspathMode.BAZEL);
-
       ruleContext.registerAction(
           new SpawnAction(
               /* owner= */ ruleContext.getActionOwner(),
               /* tools= */ NestedSetBuilder.emptySet(Order.STABLE_ORDER),
-              /* inputs= */ allInputs,
+              /* inputs= */ mandatoryInputs.build(),
               /* outputs= */ outputs.build(),
               /* primaryOutput= */ outputJar,
               /* resourceSet= */ AbstractAction.DEFAULT_RESOURCE_SET,
@@ -411,7 +418,7 @@ public class JavaHeaderCompileActionBuilder {
                   .getConfiguration()
                   .modifiedExecutionInfo(executionInfo, "Turbine"),
               /* progressMessage= */ progressMessage,
-              /* runfilesSupplier= */ EmptyRunfilesSupplier.INSTANCE,
+              /* runfilesSupplier= */ CompositeRunfilesSupplier.fromSuppliers(runfilesSuppliers),
               /* mnemonic= */ "Turbine",
               /* executeUnconditionally= */ false,
               /* extraActionInfoSupplier= */ null,
@@ -427,6 +434,7 @@ public class JavaHeaderCompileActionBuilder {
       mandatoryInputs.addTransitive(plugins.processorClasspath());
       mandatoryInputs.addTransitive(plugins.data());
     }
+    mandatoryInputs.addTransitive(compileTimeDependencyArtifacts);
 
     commandLine.addAll(
         "--builtin_processors",
@@ -447,7 +455,7 @@ public class JavaHeaderCompileActionBuilder {
             /* owner= */ ruleContext.getActionOwner(),
             /* env= */ actionEnvironment,
             /* tools= */ toolsJars,
-            /* runfilesSupplier= */ EmptyRunfilesSupplier.INSTANCE,
+            /* runfilesSupplier= */ CompositeRunfilesSupplier.fromSuppliers(runfilesSuppliers),
             /* progressMessage= */ progressMessage,
             /* mandatoryInputs= */ mandatoryInputs.build(),
             /* transitiveInputs= */ classpathEntries,
@@ -460,7 +468,6 @@ public class JavaHeaderCompileActionBuilder {
             /* configuration= */ ruleContext.getConfiguration(),
             /* dependencyArtifacts= */ compileTimeDependencyArtifacts,
             /* outputDepsProto= */ outputDepsProto,
-            /* strippedOutputDepsProto= */ strippedOutputDepsProto,
             /* classpathMode= */ classpathMode));
   }
 
@@ -469,22 +476,24 @@ public class JavaHeaderCompileActionBuilder {
    * function to avoid capturing a data member, which would keep the entire builder instance alive.
    */
   private static Consumer<Pair<ActionExecutionContext, List<SpawnResult>>> createResultConsumer(
-      Artifact strippedOutputDepsProto,
-      Artifact outputDepsProto,
-      Iterable<Artifact> inputs,
-      boolean insertDependencies) {
+      Artifact outputDepsProto) {
     return (Consumer<Pair<ActionExecutionContext, List<SpawnResult>>> & Serializable)
         contextAndResults -> {
-          SpawnResult spawnResult = Iterables.getOnlyElement(contextAndResults.getSecond());
           ActionExecutionContext context = contextAndResults.getFirst();
+          JavaCompileActionContext javaContext = context.getContext(JavaCompileActionContext.class);
+          if (javaContext == null) {
+            return;
+          }
+          SpawnResult spawnResult = Iterables.getOnlyElement(contextAndResults.getSecond());
           try {
-            Deps.Dependencies fullOutputDeps =
-                JavaCompileAction.createFullOutputDeps(
-                    spawnResult, strippedOutputDepsProto, outputDepsProto, inputs, context);
-            JavaCompileActionContext javaContext =
-                context.getContext(JavaCompileActionContext.class);
-            if (insertDependencies && javaContext != null) {
-              javaContext.insertDependencies(outputDepsProto, fullOutputDeps);
+            InputStream inMemoryOutput = spawnResult.getInMemoryOutput(outputDepsProto);
+            try (InputStream input =
+                inMemoryOutput == null
+                    ? context.getInputPath(outputDepsProto).getInputStream()
+                    : inMemoryOutput) {
+              javaContext.insertDependencies(
+                  outputDepsProto,
+                  Deps.Dependencies.parseFrom(input, ExtensionRegistry.getEmptyRegistry()));
             }
           } catch (IOException e) {
             // Left empty. If we cannot read the .jdeps file now, we will read it later or throw
